<resources>
    <string name="app_name" translatable="false">Flight App</string>
    <string name="wikipedia" translatable="false">Wikipedia</string>
    <string name="flightradar24" translatable="false">Flightradar24</string>
    <string name="radarbox" translatable="false">Radarbox</string>
    <string name="username">Name</string>
    <string name="email">Email</string>
    <string name="search_airports">Search airports...</string>
    <string name="search">Search</string>
    <string name="city_country">City, Country</string>
    <string name="iata_icao" translatable="false">IATA / ICAO</string>
    <string name="continent">Continent:</string>
    <string name="region">Region:</string>
    <string name="state">State:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="elevation">Elevation:</string>
    <string name="type">Type:</string>
    <string name="runway_length">Runway Length:</string>
    <string name="scheduled_service">Scheduled Service:</string>
    <string name="website">Website:</string>
    <string name="iso_region" translatable="false">ISO Region:</string>
    <string name="woeid" translatable="false">WOEID:</string>
    <string name="user_login">User Login</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_a_user_sign_up">Not a user? Sign Up</string>
    <string name="user_sign_up">User Sign Up</string>
    <string name="name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="tab1">Departures</string>
    <string name="tab2">Arrivals</string>
    <string name="details">Details</string>
    <string name="Page_home">Home</string>
    <string name="Page_news">News</string>
    <string name="Page_profile">Profile</string>
</resources>